--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,19 @@
     <string name="sign_up">Sign Up</string>
     <string name="SignUp_click">Already registered? Click here</string>
     <string name="Nickname">Nickname</string>
+    <string name="open">Open Navigation Drawer</string>
+    <string name="close">Close Navigation Drawer</string>
 
 
     // alon
     <string name="youtube_logo">youTube</string>
+    <string name="lighting_mode">Change mode</string>
+    <string name="upload_video">Upload video</string>
+    <string name="login">Login</string>
+    <string name="info">info</string>
+    <string name="Help">Help</string>
+    <string name="Setting">Setting</string>
+    <string name="logout">Logout</string>
+    <string name="menu_icon">Menu</string>
 
 </resources>
