--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,7 @@
     <string name="add_a_comment">Add a comment</string>
     <string name="search">search</string>
     <string name="sign_in">sign in</string>
+    <string name="rewind">rewind</string>
+    <string name="pause_play">pause/play</string>
 
 </resources>
