all set dawn - 15.6

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="logout">Logout</string>
     <string name="menu_icon">Menu</string>
     <string name="username_menu">Username</string>
+    <string name="profile">prooooooooooooooo</string>
 
 </resources>
