all set and down - 16.6

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="menu_icon">Menu</string>
     <string name="username_menu">Username</string>
     <string name="profile">prooooooooooooooo</string>
+    <string name="check">check</string>
 
 </resources>
