--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="sign_in">sign in</string>
     <string name="rewind">rewind</string>
     <string name="pause_play">pause/play</string>
-    <string name="description">Description</string>
+    <string name="description">Description:</string>
     <string name="title">Title</string>
     <string name="author">author:</string>
     <string name="likes">likes:</string>
@@ -33,5 +33,10 @@
     <string name="add_video">Add Video</string>
     <string name="select_video">Select Video</string>
     <string name="cancel">Cancel</string>
+    <string name="edit">edit</string>
+    <string name="comment">Comment</string>
+    <string name="delete">delete</string>
+    <string name="more">more</string>
+    <string name="collapse">collapse</string>
 
 </resources>
